# taktische-zeichen

./: .gitignore  CHANGELOG.md  Cargo.toml  config.toml
.github/workflows/: release.yml
icons/: fonts.template.xml
icons/einheit/: infos_gruppe.template.xml
icons/fahrzeuge/: basic_lkw.template.xml  boot.template.xml
icons/personen/: infos_fuhrer.template.xml
icons/thw/: basic_lkw.template.xml  boot.template.xml  infos_fuhrer.template.xml  infos_gruppe.template.xml
src/: config.rs  main.rs  svg_tools.rs  utils.rs
